<resources>
    <string name="app_name">Stray Watch</string>
    <string name="pets_strays_watch"><![CDATA[Pets & Strays Watch]]></string>
    <string name="StringEmail">Email</string>
    <string name="StringPassword">Password</string>
    <string name="button">Button</string>
    <string name="google">Google</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_signup">signup</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="name">Name</string>
    <string name="by_clicking_continue_you_agree_to_our_terms_of_service_and_privacy_policy">By clicking continue, you agree to our Terms of Service and Privacy Policy</string>
    <string name="or_continue_with">or continue with</string>
    <string name="todo">TODO</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_sign_in">Already Have An Account? Sign in</string>
    <string name="register">Register</string>
    <string name="petcount">Pet Count: 3</string>
    <string name="userName">King Of Hell</string>
    <string name="pet_profiling">Pet Profiling</string>
    <string name="vaccine">Vaccine Reservation</string>
    <string name="sighting">Stray Sighting\nReport</string>
    <string name="guidtip"><![CDATA[Guides & Tips]]></string>
    <string name="news">News</string>
    <string name="feedback">Feedback</string>
    <string name="dont_have_an_account_sign_up">Dont Have an Account? Sign up</string>
    <string name="user_name">User Name</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="test">test</string>
    <string name="addPetPro">Add Pets Profile</string>
    <string name="btnIcon"><![CDATA[+]]></string>
    <string name="pet_profile_form">Pet Profile Form</string>
    <string name="back_btn">Back</string>
    <string name="pet_name">Pet Name</string>
    <string name="pet_color">Pet Color</string>
    <string name="pet_gender">Pet Gender</string>
    <string name="pet_age">Pet Age</string>
    <string name="pet_type">Pet Type</string>
    <string name="vaccine_schedule">Vaccination Schedule</string>
    <string name="save_sched">Save Schedule</string>
    <string name="capture">Capture</string>
    <string name="guidesandtips">Guides And Tips</string>
    <string name="report">Stray Sighting Report</string>
    <string name="feedText">Feedback</string>
    <string name="petandstray">Pets And Stray Watch</string>
    <string name="email">Email</string>
    <string name="username">Test01</string>
    <string name="useremail">test01@gmail.com</string>
    <string name="userpass">Password</string>
    <string name="passasteris">***********</string>
    <string name="write_something_here">Write Something Here...</string>
    <string name="submit">Submit</string>
    <string name="adminDashboard">Dashboard</string>
    <string name="adminmessages">Messages</string>
    <string name="adminSightingReports">Sighting Reports</string>
    <string name="adminPetProfilingEdit">Pet Profiling</string>
    <string name="adminDash">Admin Dashboard</string>
    <string name="adminFeedback">Admin Feedback</string>
    <string name="adminPet_Profiling">Admin Pet Profiling</string>
    <string name="adminSighting_Reports">Admin Sighting Reports</string>
    <string name="adminSignout">Admin Signout</string>
    <string name="adminVaccine_Schedule">Admin Vaccine Schedule</string>
    <string name="adminMessage">Admin Message</string>
    <string name="adminNews">Admin News</string>
    <string name="adminPetProfiling">Admin Pet Profiling</string>

    <string-array name="petgender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="pettype">
        <item>Dog</item>
        <item>Cat</item>
    </string-array>

    <string name="google_map_api">AIzaSyBk86ryWOA92t81EAujvyau4dIWyNCbfc0</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="heatmap">Temporary Name</string>
</resources>